# ad-assassinator

./: README.md  TODO.md
src/: CMakeLists.txt  elevator  elevator.cpp  elevator.helpfile  elevator.hpp  main  main.cpp  os-finder.cpp  os-finder.hpp  unix-sudo-mode-check.cpp  unix-sudo-mode-check.hpp
src/tests/: elevator-test.cpp  getcwd.cpp  os-find-test.cpp  strcat_test.cpp  sudo-check.cpp
